Testing and debugging

--- a/projects.json
+++ b/projects.json
@@ -53,10 +53,10 @@
     ],
     "Personal Projects": [
       {
-        "img": "img/alumni/movies.png",
-        "title": "NJIT Movie Project",
-        "link": "https://adilsoomro15.github.io/Soomro-P3/",
-        "alt": "Screenshot of NJIT Movie Project site"
+        "img": "img/image (3).png",
+        "title": "NJGPA Music Video",
+        "link": "https://bwinecoor.github.io/newportfolio/site2.html#home",
+        "alt": "Screenshot of Brandon Winecoor's portfolio site"
       },
       {
         "img": "img/alumni/crochet.png",
