making more adjustments to the highlights

--- a/projects.json
+++ b/projects.json
@@ -2,9 +2,9 @@
     "Season 1 Highlights": [
       {
         "img": "img/image 1.png",
-        "title": "Mustang Morning Show 1",
-        "link": "https://portfolio.byteroach.com/?authuser=0",
-        "alt": "Screenshot of Dominic Adragna's portfolio site"
+        "title": "Mustang Morning Show S2 E06",
+        "link": "https://www.youtube.com/watch?v=ZFSPvbJHHGg&t=476s",
+        "alt": "Screenshot of Mustang Morning Show"
       },
       {
         "img": "img/Screenshot 2025-04-02 124527.png",
@@ -14,9 +14,9 @@
       },
       {
         "img": "img/Screenshot 2025-04-02 124847.png",
-        "title": "Mustang Morning Show 3",
-        "link": "https://524rc.github.io/Port3/?authuser=0",
-        "alt": "Screenshot of Ryan Chung's portfolio site"
+        "title": "Mustang Morning Show S1 E07",
+        "link": "https://www.youtube.com/watch?v=qLBEPRSHIJY&t=1s",
+        "alt": "Screenshot of Mustang Morning Show"
       },
       {
         "img": "img/image (3).png",
@@ -27,16 +27,16 @@
     ],
     "Season 2 Highlights": [
       {
-        "img": "img/image 1.png",
-        "title": "Rock Paper Scissors",
-        "link": "https://issac-eligulashvili.github.io/rps/",
-        "alt": "Screenshot of Rock Paper Scissors game project"
+        "img": "img/Screenshot 2025-04-02 124847.png",
+        "title": "Mustang Morning Show S2 E02",
+        "link": "https://www.youtube.com/watch?v=06bV46l-nTw&t=1s",
+        "alt": "Screenshot of Mustang Morning Show"
       },
       {
-        "img": "img/Screenshot 2025-04-02 124527.png",
-        "title": "Work Learning Project",
-        "link": "https://saltforsale.github.io/Phase-Tw0/",
-        "alt": "Screenshot of Work Learning Project website"
+        "img": "img/image 1.png",
+        "title": "Mustang Morning Show S2 E06",
+        "link": "https://www.youtube.com/watch?v=ZFSPvbJHHGg&t=1s",
+        "alt": "Screenshot of Mustang Morning Show"
       },
       {
         "img": "img/Screenshot 2025-04-02 124847.png",
